<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="com.seattle.gituserfinder.views.search_user.viewmodel.SearchingViewModel"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="12sp"
    >
        <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
                    android:fillViewport="true"
        >
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:fontFamily="@font/montserratbold"
                        android:textSize="24sp"
                        android:layout_margin="12dp"
                        android:textColor="@color/colorPrimary"
                        android:layout_gravity="center_horizontal"
                />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/find_user_on_github"
                        android:layout_marginTop="16sp"
                        android:visibility="invisible"
                        android:gravity="center"
                        android:fontFamily="@font/montserratbold"
                        android:textSize="22sp"
                        android:textColor="@color/black"
                />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/search_bar_layout"
                >

                    <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                    >

                        <com.google.android.material.textfield.TextInputEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/username_or_email"
                                android:text="@={viewModel.MSearchBar}"
                                android:padding="12dp"
                                android:fontFamily="@font/montserratmedium"
                                android:id="@+id/username_et"
                        />
                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>


                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_border_layout"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/search"
                        android:paddingStart="48dp"
                        android:paddingEnd="48dp"
                        android:fontFamily="@font/montserratsemibold"
                        android:id="@+id/search_btn"
                />

                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="250dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginTop="24dp"
                        card_view:cardCornerRadius="16dp"
                        android:id="@+id/userCardView"

                >
                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="match_parent"
                                  android:orientation="vertical"
                                  android:id="@+id/user_short_detail_layout"
                                  android:visibility="gone"
                    >
                        <ImageView
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                android:id="@+id/user_profile_img"
                                android:layout_width="130dp"
                                android:layout_height="130dp"
                                android:scaleType="centerCrop"
                                android:background="@drawable/profile_circle_background"
                                android:contentDescription="@string/profile_picture_of_user"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:fontFamily="@font/montserratmedium"
                                android:textSize="22sp"
                                android:textColor="@color/black"
                                android:id="@+id/username_tv"
                        />

                        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:background="@drawable/rounded_border_layout"
                                android:layout_marginBottom="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginEnd="24dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="48dp"
                                android:text="@string/see_more"
                                android:paddingStart="48dp"
                                android:paddingEnd="48dp"
                                android:fontFamily="@font/montserratsemibold"
                                android:id="@+id/see_more_detail_btn"
                        />
                    </LinearLayout>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:text="@string/user_searching_message"
                            android:fontFamily="@font/montserratmedium"
                            android:textSize="18sp"
                            android:textColor="@color/greyish_black"
                            android:id="@+id/no_match_found_tv"

                    />

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>